test/syc/bad/bitfinctype.c
/*
 * Bitfield has incorrect type.
 */

struct s {
	int *a : 1;
};
